# eulerei

./: .gitignore  CMakeLists.txt
Problem21_Amicable_Numbers/: main.cpp
Problem22_NamesScores/: main.cpp
Problem26_ReciprocalCycle/: main.cpp
Problem27_QuadraticPrimes/: main.cpp
Problem28_Number_Spiral/: main.cpp
Problem29_DistinctPowers/: main.cpp
Problem30_Digit_5th_powers/: main.cpp
Problem34_Digit_Factorials/: main.cpp
Problem35_CircularPrimes/: main.cpp
Problem37_Truncatable_Primes/: main.cpp
Problem40_Champrnowne_Constant/: main.cpp
Problem41_Pandigital_Prime/: main.cpp
Problem42_Coded_Triangle_Numbers/: main.cpp
Problem44_PentagonNumbers/: main.cpp
Problem46_GoldbachOtherConjecture/: main.cpp
Problem48_SelfPowers/: main.cpp
Problem49_Prime_Permutations/: main.cpp
Problem53_Combinatoric_Selections/: main.cpp
Problem58_Spiral_Primes/: main.cpp
helpers/: big_integer.h  booth.cpp  compute_primes.h  get_all_divisors.h  get_permutations.h  is_pandigital_number.h  is_power_of.h  main_test_big_integer.cpp  main_test_power_of.cpp  permutations.h  read_csv_file.h
helpers/test/: CMakeLists.txt
helpers/test/big_integer/: addition.cpp  equal_operator.cpp  equality_operators.cpp  exponentiation.cpp  multiplication.cpp  string_conversion.cpp  subtraction.cpp
