cmake_minimum_required(VERSION 3.21)
project(problem27)
project(problem29)
set(CMAKE_CXX_STANDARD 14)

add_executable(problem21 Problem21_Amicable_Numbers/main.cpp)
add_executable(problem22 Problem22_NamesScores/main.cpp)
add_executable(problem27 Problem27_QuadraticPrimes/main.cpp)
add_executable(problem26 Problem26_ReciprocalCycle/main.cpp)
add_executable(problem28 Problem28_Number_Spiral/main.cpp)
add_executable(problem29 Problem29_DistinctPowers/main.cpp)
add_executable(problem35 Problem35_CircularPrimes/main.cpp)
add_executable(problem46 Problem46_GoldbachOtherConjecture/main.cpp)
add_executable(problem30 Problem30_Digit_5th_powers/main.cpp)
add_executable(problem34 Problem34_Digit_Factorials/main.cpp)
add_executable(problem37 Problem37_Truncatable_Primes/main.cpp)
add_executable(problem40 Problem40_Champrnowne_Constant/main.cpp)
add_executable(problem41 Problem41_Pandigital_Prime/main.cpp)
add_executable(problem42 Problem42_Coded_Triangle_Numbers/main.cpp)
add_executable(problem49 Problem49_Prime_Permutations/main.cpp)
add_executable(problem53 Problem53_Combinatoric_Selections/main.cpp)
add_executable(problem58 Problem58_Spiral_Primes/main.cpp)
